--- a/MagicianAzure/MagicianAzure.csproj
+++ b/MagicianAzure/MagicianAzure.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>    
+    <PackageReference Include="ImageProcessor" Version="2.5.5" />    
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
